feature(backend): improving data structures and response information
